--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <button id="speed-1x" class="time-btn active">1x</button>
                 <button id="speed-5x" class="time-btn">5x</button>
                 <button id="speed-10x" class="time-btn">10x</button>
+                <button id="speed-30x" class="time-btn">30x</button>
             </div>
         </div>
 
