--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ function setupUI() {
         document.getElementById('pause-btn').textContent = gameState.isPaused ? '▶ Start' : '⏸ Pauza';
     };
 
-    ['1','5','10'].forEach(s => {
+    ['1','5','10','30'].forEach(s => {
         document.getElementById(`speed-${s}x`).onclick = () => {
             gameState.gameSpeed = parseInt(s);
             document.querySelectorAll('.time-btn:not(#pause-btn)').forEach(b => b.classList.remove('active'));
