--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         </div>
     </div>
     <script src="data/gamedata.js"></script>
+    <script src="data/girls.js"></script>
     <script>
 
 // ============================================================================
